--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -37,7 +37,7 @@
           </td>
           <% if can? :create, Course %>
           <td>
-            <a class="edit" data-toggle="modal" onclick="editCourse(<%= course.id %>,'<%= course.title %>', <%= course.institution_id %>, <%= course.grade %>)"><i class="material-icons" data-toggle="tooltip" title="Editar" data-original-title="Editar">&#xE254;</i></a>
+            <a class="edit" data-toggle="modal" onclick="editCourse(<%= course.id %>,'<%= course.title %>', '<%= course.institution_id %>', <%= course.grade %>)"><i class="material-icons" data-toggle="tooltip" title="Editar" data-original-title="Editar">&#xE254;</i></a>
             <a class="delete" data-toggle="modal" onclick="deleteCourse(<%= course.id %>)"><i class="material-icons" data-toggle="tooltip" title="Deletar" data-original-title="Deletar">&#xE872;</i></a>
           </td>
           <% end %>
